--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
   },
   "homepage": "https://github.com/actions/checkout#readme",
   "dependencies": {
-    "@actions/core": "^1.2.6",
-    "@actions/exec": "^1.0.1",
-    "@actions/github": "^2.2.0",
-    "@actions/io": "^1.0.1",
-    "@actions/tool-cache": "^1.1.2",
+    "@actions/core": "^1.9.1",
+    "@actions/exec": "^1.1.1",
+    "@actions/github": "^5.1.0",
+    "@actions/io": "^1.1.2",
+    "@actions/tool-cache": "^2.0.1",
+    "@octokit/rest": "^19.0.4",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
@@ -41,13 +42,14 @@
     "@types/uuid": "^3.4.6",
     "@typescript-eslint/parser": "^5.1.0",
     "@zeit/ncc": "^0.20.5",
-    "eslint": "^7.32.0",
-    "eslint-plugin-github": "^4.3.2",
+    "eslint": "^8.0.1",
+    "eslint-plugin-github": "^4.3.7",
     "eslint-plugin-jest": "^25.2.2",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^27.3.0",
     "jest-circus": "^27.3.0",
     "js-yaml": "^3.13.1",
-    "prettier": "^1.19.1",
+    "prettier": ">=2.0.0",
     "ts-jest": "^27.0.7",
     "typescript": "^4.4.4"
   }
